--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "compass": "^0.1.1",
     "firebase": "^9.6.5",
     "material-icons": "^1.10.6",
     "next": "12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-modal": "^3.14.4"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.0",
