--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "react-modal": "^3.14.4"
   },
   "devDependencies": {
@@ -25,6 +26,6 @@
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "postcss": "^8.4.6",
-    "tailwindcss": "^3.0.18"
+    "tailwindcss": "^3.0.23"
   }
 }
